# HeadlineWise

./: .env.example  .gitignore  License.txt  README.md  app.py  conftest.py  main.py  pyproject.toml  requirements.txt
data/: clickbait_model.pkl  train1.csv  train2.csv  train_pl.csv
src/core/: config.py  headline_quality_evaluator_prompt.py  llm_provider.py  prompts.py  schemas.py
src/data/: dummy.py
src/scripts/: fill_translations_gemini.py  train_clickbait_model.py  translate_datasets.py
src/services/: headline_quality_evaluator.py  headline_quality_heuristics.py  headline_quality_merge.py
src/utils/: parser.py  portal_connectors.py  scraper.py  telemetry.py
tests/: test_enhanced_scraper.py  test_evaluator_contract.py  test_headline_assessment.py  test_persistence.py  verify_logic.py  verify_persistence.py
