[project]
name = "headlinewise"
version = "0.1.0"
description = "Headline scoring and clickbait detection tool for Polish news portals, powered by Gemini LLM and a local scikit-learn ML model."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.32.0",
    "pydantic>=2.6.4",
    "google-genai>=1.0.0",
    "openai>=1.40.0",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "stop-words>=2018.7.23",
    "trafilatura>=1.8.1",
    "spacy>=3.7.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "deep-translator>=1.11.4",
    "pl-core-news-sm",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "ruff>=0.1.0",
]

[tool.uv.sources]
pl-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/pl_core_news_sm-3.8.0/pl_core_news_sm-3.8.0-py3-none-any.whl" }

[tool.ruff.lint]
ignore = ["ARG"]
